gitops/taskflow/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: taskflow-backend-service
  namespace: taskflow
spec:
  selector:
    app: taskflow-backend
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
  type: ClusterIP
